<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter details to register as a new user. When done hit Register button" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name_prompt"
        android:inputType="textCapWords" />


    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name_prompt"
        android:inputType="textCapWords" />


    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="8" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_prompt"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/reenter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/re_enter_password_prompt"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Birthdate"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register" />

    </LinearLayout>


</LinearLayout>
