<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="au.com.gravitywave.amber.registration.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_name_details"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

                <EditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name_prompt"
                    android:inputType="textCapWords"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

                <EditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name_prompt"
                    android:inputType="textCapWords"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address_prompt"
                        android:inputType="textMultiLine"
                        android:minLines="3"
                        android:text="@string/address_prompt"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_personal_details"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />


                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/birthdate"
                    style="@android:style/Widget.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Birthdate"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

                <Spinner
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/gender"
                    android:prompt="@string/gender_prompt">

                </Spinner>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/register" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
